win build done added dependencies for winsetup

--- a/ready.kv
+++ b/ready.kv
@@ -29,8 +29,8 @@
             title: "Instagram Status"
             elevation: 10
             type: "top"
-            right_action_items: [["ray-start-arrow", lambda x: root.startBot()],["reload", lambda x: root.RefreshManifest()],["details", lambda x: root.showLog()],["home-outline", lambda x: root.navToHome()],["logout", lambda x: root.logoutConfirm()]]
-            # 
+            right_action_items: [["reload", lambda x: root.RefreshManifest()],["details", lambda x: root.showLog()],["home-outline", lambda x: root.navToHome()],["logout", lambda x: root.logoutConfirm()]]
+            # ["ray-start-arrow", lambda x: root.startBot()],
         
         MDGridLayout:
             orientation:'horizontal'
