error fix and improvements win build

--- a/ready.kv
+++ b/ready.kv
@@ -206,6 +206,7 @@
                 font_style: 'H4'
                 size_hint: 1, 0.2
             MDLabel:
+                id: bLabelHead
                 theme_text_color: "Custom"
                 text: "Real Growth, Real Engagement"
                 text_color: get_color_from_hex("#FFFFFF")
@@ -214,6 +215,7 @@
                 size_hint: 1, 0.3
 
             MDLabel:
+                id: bLabelText 
                 theme_text_color: "Custom"
                 text: "Your target filters, growth charts, and much more available \nat [u][ref=google.com]socialplannerpro.com[/ref][/u]"
                 text_color: get_color_from_hex("#FFFFFF")
