sg changes with clientid

--- a/home.kv
+++ b/home.kv
@@ -104,6 +104,7 @@
                     size_hint: 0.8, 0.1
                     pos_hint: {"center_x": .5}
                     enabled : False
+                    on_release: root.btnLIN_released()
                 
                 MDLabel:
                     id:lblstatusLinkedIn
